flag to download full images if wifi

--- a/res/xml/prefs_content.xml
+++ b/res/xml/prefs_content.xml
@@ -39,6 +39,12 @@
                 android:summary="@string/OnlyNeededIfUsing"
                 android:defaultValue=""
                 android:persistent="true"/>
+        <CheckBoxPreference
+                android:key="imageproxy.skipOnWifi"
+                android:title="Don't proxy while on Wi-Fi"
+                android:summary="Because there's no need to save on traffic"
+                android:defaultValue="false"
+                android:persistent="true"/>
         <EditTextPreference
                 android:key="image.daystokeep"
                 android:title="@string/DaysToKeepCachedImages"
