removed more theme refs better extxmpp reconnect out of memory errors handled more new reports

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -156,4 +156,13 @@
         <item>Theme_Light</item>
         <item>Theme_Translucent</item>
     </string-array>
+
+    <string-array name="simpleWebBrowserMode">
+        <item>ja any proxy</item>
+        <item>google.com/gwt (no img)</item>
+        <item>google.com/gwt</item>
+        <item>boilerpipe-web</item>
+        <item>ja pocket.com</item>
+        <item>ja bolerplate-lib</item>
+    </string-array>
 </resources>
