--- a/res/layout/simple_browser.xml
+++ b/res/layout/simple_browser.xml
@@ -4,6 +4,40 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
+    <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+        <Button
+                android:id="@+id/button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:text="Back"
+                />
+        <Button
+                android:id="@+id/browser"
+                android:layout_width="wrap_content"
+                android:layout_height="48sp"
+                android:layout_alignParentRight="true"
+                android:drawableTop="@android:drawable/ic_menu_view"
+                />
+        <Spinner
+                android:id="@+id/mode"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:entries="@array/simpleWebBrowserMode"
+                android:layout_toRightOf="@id/button"
+                android:layout_toLeftOf="@id/browser"
+                android:layout_alignParentTop="@id/button"
+                >
+
+        </Spinner>
+
+    </RelativeLayout>
+
     <WebView android:id="@+id/webview"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
