--- a/res/layout/listitem_juickmessage.xml
+++ b/res/layout/listitem_juickmessage.xml
@@ -42,6 +42,13 @@
                 android:layout_below="@id/pretext"
                 android:layout_height="32px"
                 android:gravity="top"/>
+        <TextView
+                android:id="@+id/compactDate"
+                android:layout_width="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
+                android:layout_height="wrap_content"
+                />
     </com.juick.android.MyRelativeLayout>
 
 </com.juick.android.PressableLinearLayout>
