--- a/res/xml/prefs_ui.xml
+++ b/res/xml/prefs_ui.xml
@@ -1,12 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <ListPreference
-            android:key="messagesFontScale"
-            android:title="@string/Message_font_scale_factor"
-            android:entries="@array/scaleFontSize"
-            android:entryValues="@array/scaleFontSize"
-            android:defaultValue="1.0"
-            android:persistent="true"/>
     <PreferenceCategory android:title="@string/FullScreen">
         <CheckBoxPreference
                 android:key="fullScreenMessages"
@@ -48,83 +41,93 @@
                 android:defaultValue="false"
                 android:persistent="true"/>
     </PreferenceCategory>
-    <PreferenceCategory android:title="@string/Colors">
-<!--
-        <ListPreference
-                android:key="nativeTheme"
-                android:title="Theme for UI elemnents"
-                android:entries="@array/themes"
-                android:entryValues="@array/themes"
-                android:defaultValue="default"
+    <CheckBoxPreference
+            android:key="persistLastMessagesPosition"
+            android:title="@string/Save_position"
+            android:summary="@string/Position_can_be_reset"
+            android:defaultValue="false"
+            android:persistent="true"/>
+    <CheckBoxPreference
+            android:key="lastReadMessages"
+            android:title="@string/MarkAlreadyReadMessages"
+            android:defaultValue="false"
+            android:persistent="true"/>
+    <CheckBoxPreference
+            android:key="prefetchMessages"
+            android:title="@string/PrefetchMoreMessages"
+            android:summary="@string/AndNeverSeeLoading"
+            android:defaultValue="false"
+            android:persistent="true"/>
+    <CheckBoxPreference
+            android:key="enableScaleByGesture"
+            android:title="@string/EnableFontScaleByGesture"
+            android:defaultValue="true"
+            android:persistent="true"/>
+    <CheckBoxPreference
+            android:key="confirmActions"
+            android:title="@string/Confirm_asctions"
+            android:summary="@string/Such_as_blacklist_recommend"
+            android:defaultValue="true"
+            android:persistent="true"/>
+    <CheckBoxPreference
+            android:key="previewReplies"
+            android:title="@string/PreviewRepliesBeforeSend"
+            android:summary="@string/PreviewRepliesBeforeSend2"
+            android:defaultValue="false"
+            android:persistent="true"/>
+    <CheckBoxPreference
+            android:key="warnRepliesToBody"
+            android:title="@string/WarnRepliesWithoutReplyTo"
+            android:summary="@string/WarnRepliesWithoutReplyTo2"
+            android:defaultValue="false"
+            android:persistent="true"/>
+    <CheckBoxPreference
+            android:key="enableDrafts"
+            android:title="Enable saving drafts"
+            android:defaultValue="false"
+            android:persistent="true"/>
+    <CheckBoxPreference
+            android:key="capitalizeReplies"
+            android:title="@string/CapitalizeReplyText"
+            android:summary="@string/WhenReplying"
+            android:defaultValue="false"
+            android:persistent="true"/>
+    <CheckBoxPreference
+            android:key="turnOffButtons"
+            android:title="Turn off buttons light"
+            android:defaultValue="false"
+            android:persistent="true"/>
+    <PreferenceCategory android:title="@string/CameraCapture">
+        <CheckBoxPreference
+                android:key="useTempFileForCapture"
+                android:title="@string/CaptureIntoTempFile"
+                android:defaultValue="true"
                 android:persistent="true"/>
--->
-        <yuku.ambilwarna.widget.AmbilWarnaPreference
-            android:key="Colors.COMMON_BACKGROUND"
-            android:title="@string/CommonBackground"
-            android:defaultValue="0xFFFFFFFF"
-            android:persistent="true"/>
-<!--
-        <yuku.ambilwarna.widget.AmbilWarnaPreference
-            android:key="Colors.BUTTON_BACKGROUND"
-            android:title="Button background"
-            android:defaultValue="0xFFFFFFFF"
-            android:persistent="true"/>
--->
-        <yuku.ambilwarna.widget.AmbilWarnaPreference
-            android:key="Colors.COMMON_FOREGROUND"
-            android:title="@string/CommonForeground"
-            android:defaultValue="0xFF000000"
-            android:persistent="true"/>
-        <yuku.ambilwarna.widget.AmbilWarnaPreference
-            android:key="Colors.DIVIDER"
-            android:title="@string/ListDivider"
-            android:defaultValue="0xFF808080"
-            android:persistent="true"/>
-        <yuku.ambilwarna.widget.AmbilWarnaPreference
-            android:key="Colors.USERNAME"
-            android:title="@string/Usernames"
-            android:defaultValue="0xFFC8934E"
-            android:persistent="true"/>
-        <yuku.ambilwarna.widget.AmbilWarnaPreference
-            android:key="Colors.USERNAME_ME"
-            android:title="@string/YourUsername"
-            android:defaultValue="0xFF938e00"
-            android:persistent="true"/>
-        <yuku.ambilwarna.widget.AmbilWarnaPreference
-            android:key="Colors.USERNAME_READ"
-            android:title="@string/UserNamesRead"
-            android:defaultValue="0xFFc84e4e"
-            android:persistent="true"/>
-        <yuku.ambilwarna.widget.AmbilWarnaPreference
-            android:key="Colors.TAGS"
-            android:title="@string/Tags"
-            android:defaultValue="0xFF0000CC"
-            android:persistent="true"/>
-        <yuku.ambilwarna.widget.AmbilWarnaPreference
-            android:key="Colors.URLS"
-            android:title="@string/URLs"
-            android:defaultValue="0xFF0000CC"
-            android:persistent="true"/>
-        <yuku.ambilwarna.widget.AmbilWarnaPreference
-            android:key="Colors.MESSAGE_ID"
-            android:title="@string/MessageIDs"
-            android:defaultValue="0xFFa0a5bd"
-            android:persistent="true"/>
-        <yuku.ambilwarna.widget.AmbilWarnaPreference
-            android:key="Colors.NUMBER_OF_COMMENTS"
-            android:title="@string/NumberOfrComments"
-            android:defaultValue="0xFFC8934E"
-            android:persistent="true"/>
-        <yuku.ambilwarna.widget.AmbilWarnaPreference
-            android:key="Colors.TRANSLATED_LABEL"
-            android:title="@string/TranslatedLabel"
-            android:defaultValue="0xFF4ec856"
-            android:persistent="true"/>
-        <yuku.ambilwarna.widget.AmbilWarnaPreference
-            android:key="Colors.DATE"
-            android:title="@string/Dates"
-            android:defaultValue="0xFFAAAAAA"
-            android:persistent="true"/>
+        <CheckBoxPreference
+                android:key="askForResize"
+                android:title="@string/AskForPhotoResize"
+                android:summary="@string/OnlyWorksWithAboveCheckboxOn"
+                android:defaultValue="false"
+                android:persistent="true"/>
+    </PreferenceCategory>
+
+    <PreferenceCategory android:title="Debug/Tuning">
+        <CheckBoxPreference
+                android:key="alternativeLongClick"
+                android:title="Alternative long click"
+                android:defaultValue="false"
+                android:persistent="true"/>
+        <CheckBoxPreference
+                android:key="dontWatchPreferences"
+                android:title="Ignore prefs change in main"
+                android:defaultValue="false"
+                android:persistent="true"/>
+        <CheckBoxPreference
+                android:key="dontKeepParsed"
+                android:title="Dont keep parsed messages"
+                android:summary="Saves memory at expense of smoothness"
+                android:defaultValue="false"
+                android:persistent="true"/>
     </PreferenceCategory>
 
 
