--- a/res/layout/web_login.xml
+++ b/res/layout/web_login.xml
@@ -1,48 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent">
 
-    <TableLayout
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="fill_parent"
+             android:layout_height="wrap_content"
+             android:orientation="vertical">
 
+    <TableRow
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:background="#FFFFFF"
-            android:orientation="vertical">
-        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="right"
-                    android:paddingRight="5sp"
-                    android:text="Web Login:"/>
-            <EditText
-                    android:id="@+id/login"
-                    android:paddingRight="10dp"
-                    android:paddingLeft="10dp"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/LeftPartOf_"
-                    />
-        </TableRow>
-        <TableRow android:layout_width="fill_parent">
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingRight="5sp"
-                    android:gravity="right"
-                    android:text="Password:"/>
-            <EditText
-                    android:id="@+id/password"
+            android:layout_height="wrap_content">
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:paddingRight="5sp"
+                android:text="Login:"/>
+
+        <EditText
+                android:id="@+id/login"
+                android:paddingRight="10dp"
+                android:paddingLeft="10dp"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                />
+    </TableRow>
+
+    <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="5sp"
+                android:gravity="right"
+                android:text="Password:"/>
+
+        <EditText
+                android:id="@+id/password"
+                android:password="true"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:paddingRight="10dp"
+                android:paddingLeft="10dp"
+                />
+    </TableRow>
+
+    <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="5sp"
+                android:gravity="right"
+                android:text=""/>
+
+        <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+            <CheckBox
+                    android:id="@+id/insecure"
                     android:password="true"
-                    android:layout_width="fill_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingRight="10dp"
                     android:paddingLeft="10dp"
                     />
-        </TableRow>
-    </TableLayout>
 
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="5sp"
+                    android:gravity="left"
+                    android:enabled="false"
+                    android:text="Store plain-text password in private area"/>
+        </LinearLayout>
+    </TableRow>
+</TableLayout>
 
-</LinearLayout>
